# scrapix-rs

./: .gitignore  Cargo.toml  test.json  tiny-test.json
src/: config.rs  crawler.rs  main.rs  meilisearch.rs  scraper.rs
