[package]
name = "scrapix-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = "0.27.1"
tokio = { version = "1.28", features = ["full"] }
spider = "2.27.62"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json"] }
html2md = "0.2"
select = "0.6"
futures = "0.3"
scraper = "0.22"
env_logger = "0.11"
uuid = { version = "1.12", features = ["v4"] }
